# crewai_report_generation_app

./: README.md  pyproject.toml  report.md
src/crewai_report_generation_app/: crew.py  main.py
